--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
           <li class="sub-list-item list-item">
             <a href="#" class="link">men</a>
           </li>
-          <li class="sub-list-item list-item">
-            <a href="#" class="link">women</a></li>
+          <li class="sub-list-item list-item woman-li">
+            <a href="#" class="link">women</a>
+            <ul class="sub-woman-ul">
+              <li class="sub-woman"><a class="sub-woman-a" href="#">Dress</a></li>
+              <li class="sub-woman"><a class="sub-woman-a" href="#">Pants</a></li>
+              <li class="sub-woman"><a class="sub-woman-a" href="#">Shoes</a></li>
+            </ul>
+          </li>
+             
           <li class="sub-list-item list-item">
             <a href="#" class="link">kids</a></li>
         </ul>
